apps/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
spec:
  type: ClusterIP
  selector:
    app: dashboard
  ports:
    - name: http
      port: 80
      targetPort: 80
